OBA 1e poging HTML opzet
1e opzet van mijn OBA hifi breakdownschets naar html code

--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OBA digitale reserveringen</title>
+</head>
+<body>
+    <header>
+        <a href="https://www.oba.nl"><h1>OBA</h1></a>
+    </header>
 
+
+
+    <main>
+        <h2>Mijn reserveringen</h2>
+
+        <article>
+            <img src="https://i.ibb.co/fxdWRv3/cover-pachinko.jpg" alt="Pachinko" style="width:5em; height: 7em;">
+            <h3> Pachinko, Min Jin Lee </h3>
+            <p> Een ongehuwde Koreaanse vrouw raakt in 1932 zwanger. Een jonge pastoor biedt aan met haar te trouwen en ze vestigen zich in Japan, waar ze twee zonen krijgen.</p>
+            <button>luisterboeken</button>
+            <button>e-books</button>
+        </article>
+
+        <article>
+            <h3> title, writer </h3>
+            <p> beschrijving</p>
+            <button>luisterboeken</button>
+            <button>e-books</button>
+        </article>
+
+        <article>
+            <h3> title, writer </h3>
+            <p> beschrijving</p>
+            <button>luisterboeken</button>
+            <button>e-books</button>
+        </article>
+
+        <article>
+            <h3> title, writer </h3>
+            <p> beschrijving</p>
+            <button>luisterboeken</button>
+            <button>e-books</button>
+        </article>
+    </main>
+
+    <footer>
+        
+    </footer>
+</body>
+</html>
