mobiele versie af + beginnetje aan layout midsize-desktop versie

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                             <span class="text nav-text">Leeslijst</span>
                         </a>
                     </li>
-
+<!--link naar reserveringen.html toegevoegd-->
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="uitleningen.html">
                             <i class='bx bx-bar-chart-alt-2 icon' ></i>
                             <span class="text-long nav-text">Uitleningen en verlengen</span>
                         </a>
@@ -76,9 +76,9 @@
                             <span class="text nav-text">Betaalgeschiedenis</span>
                         </a>
                     </li>
-<!--link naar reserveringen.html toegevoegd-->
+
                     <li class="nav-link">
-                        <a href="reserveringen.html">
+                        <a href="">
                             <i class='bx bx-heart icon' ></i>
                             <span class="text nav-text">Reserveringen</span>
                         </a>
