midsize versie + begin full size
kleine aanpassingen in waardes, CSS grid layouts, terug knop toegevoegd, darkmode werkt

--- a/uitleningen.html
+++ b/uitleningen.html
@@ -125,13 +125,14 @@
         </div>
 
     </nav>
-<!--Mijn in te leveren boeken-->
-    <section class="home">
+<!--My part on this project: Mijn uitleningen-->
+    <main class="home">
+
         <div class="text"><img src="./images/oba.png" alt="OBA logo"></div>
-        <main>
-            <h1>Mijn Uitleningen</h1>
-            <h6>in te leveren boeken: 6</h6>
-            
+
+        <h1>Mijn Uitleningen</h1>
+        <h6>in te leveren boeken: 6</h6>
+
             <article>
                 <img src="https://i.ibb.co/tCpwZHS/cover-beasts-of-a-little-land.jpg" alt="Beasts of a little Land">
                 <h3> Beasts of a Little Land, Juhea Kim </h3>
@@ -185,9 +186,9 @@
                 <h5>over 11 dagen</h5>
                 <button>verlengen</button>
             </article>
-        </main>
 
-    </section>
+        <button>terug &#8594;</button>
+    </main>
 
 </body>
 </html>
