--- a/uitleningen.html
+++ b/uitleningen.html
@@ -77,7 +77,7 @@
                             <span class="text nav-text">Betaalgeschiedenis</span>
                         </a>
                     </li>
-<!--dit is het gedeelte waar ik mee werk, namelijk:reserveringen -->
+
                     <li class="nav-link">
                         <a href="reserveringen.html">
                             <i class='bx bx-heart icon' ></i>
@@ -128,13 +128,15 @@
 <!--My part on this project: Mijn uitleningen-->
     <main class="home">
 
-        <div class="text"><img src="./images/oba.png" alt="OBA logo"></div>
+        <header>
+            <div class="text"><img src="./images/oba.png" alt="OBA logo"></div>
 
-        <div class="uitleningen">
-            <button class="account"><img src="https://i.ibb.co/4PmHHJc/user-icon.png" style="width: 3rem"></button>
-            <h1>Mijn Uitleningen</h1>
-            <h6>in te leveren boeken: 6</h6>
-        </div>
+            <div class="uitleningen">
+                <button class="account"><img src="https://i.ibb.co/4PmHHJc/user-icon.png" style="width: 3rem"></button>
+                <h1>Mijn Uitleningen</h1>
+                <h6>in te leveren boeken: 6</h6>
+            </div>
+        </header>
 
             <div class="articles">
                 <article>
@@ -195,8 +197,6 @@
         <button class="terug">terug &#8594;</button>
 
     </main>
-
-
 
 </body>
 </html>
