--- a/index.html
+++ b/index.html
@@ -43,6 +43,64 @@
 
                 <ul class="menu-links">
                     <li class="nav-link">
+                        <a href="https://yujing-student.github.io/the-client-website/">
+                            <i class='bx bx-home icon'></i>
+                            <span class="text nav-text">Welkom</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-link">
+                        <a href="https://pommelienn.github.io/the-client-website/">
+                            <i class='bx bx-user icon'></i>
+                            <span class="text nav-text">Overzicht abonnement</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-link">
+                        <a href="#">
+                            <i class='bx bx-list-ul icon'></i>
+                            <span class="text nav-text">Leeslijst</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-link">
+                        <a href="https://wingsvn.github.io/the-client-website/">
+                            <i class='bx bx-bar-chart-alt-2 icon'></i>
+                            <span class="text-long nav-text">Uitleningen en verlengen</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-link">
+                        <a href="https://annevd.github.io/the-client-website/uitleengeschiedenis.html">
+                            <i class='bx bx-bell icon'></i>
+                            <span class="text nav-text">Uitleengeschiedenis</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-link">
+                        <a href="https://lisagjh.github.io/the-client-website/">
+                            <i class='bx bx-bookmark icon'></i> <span class="text nav-text">Diensten en Producten</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-link">
+                        <a href="#">
+                            <i class='bx bx-pie-chart-alt icon'></i>
+                            <span class="text nav-text">Betaalgeschiedenis</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-link">
+                        <a href="#">
+                            <i class='bx bx-heart icon'></i>
+                            <span class="text nav-text">Reserveringen</span>
+                        </a>
+                    </li>
+
+
+                <!--
+                <ul class="menu-links">
+                    <li class="nav-link">
                         <a href="#">
                             <i class='bx bx-home icon'></i>
                             <span class="text nav-text">Welkom</span>
@@ -55,7 +113,7 @@
                             <span class="text nav-text">Leeslijst</span>
                         </a>
                     </li>
-<!--link naar reserveringen.html toegevoegd-->
+
                     <li class="nav-link">
                         <a href="uitleningen.html">
                             <i class='bx bx-bar-chart-alt-2 icon' ></i>
@@ -97,7 +155,7 @@
                             <span class="text nav-text">Tellerstand abonnement</span>
                         </a>
                     </li>
-                </ul>
+                </ul> -->
             </div>
 
             <div class="bottom-content">
