--- a/uitleningen.html
+++ b/uitleningen.html
@@ -44,9 +44,16 @@
 
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="https://yujing-student.github.io/the-client-website/">
                             <i class='bx bx-home icon'></i>
                             <span class="text nav-text">Welkom</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-link">
+                        <a href="https://pommelienn.github.io/the-client-website/">
+                            <i class='bx bx-user icon'></i>
+                            <span class="text nav-text">Overzicht abonnement</span>
                         </a>
                     </li>
 
@@ -58,47 +65,39 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
-                            <i class='bx bx-bar-chart-alt-2 icon' ></i>
+                        <a href="https://wingsvn.github.io/the-client-website/">
+                            <i class='bx bx-bar-chart-alt-2 icon'></i>
                             <span class="text-long nav-text">Uitleningen en verlengen</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="https://annevd.github.io/the-client-website/uitleengeschiedenis.html">
                             <i class='bx bx-bell icon'></i>
                             <span class="text nav-text">Uitleengeschiedenis</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
+                        <a href="https://lisagjh.github.io/the-client-website/">
+                            <i class='bx bx-bookmark icon'></i> <span class="text nav-text">Diensten en Producten</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-link">
                         <a href="#">
-                            <i class='bx bx-pie-chart-alt icon' ></i>
+                            <i class='bx bx-pie-chart-alt icon'></i>
                             <span class="text nav-text">Betaalgeschiedenis</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="reserveringen.html">
-                            <i class='bx bx-heart icon' ></i>
+                        <a href="#">
+                            <i class='bx bx-heart icon'></i>
                             <span class="text nav-text">Reserveringen</span>
                         </a>
                     </li>
 
-                    <li class="nav-link">
-                        <a href="#">
-                            <i class='bx bx-wallet icon' ></i>
-                            <span class="text nav-text">Desposito's</span>
-                        </a>
-                    </li>
-
-                    <li class="nav-link">
-                        <a href="#">
-                            <i class='bx bx-wallet icon' ></i>
-                            <span class="text nav-text">Tellerstand abonnement</span>
-                        </a>
-                    </li>
-                </ul>
             </div>
 
             <div class="bottom-content">
@@ -128,7 +127,6 @@
 <!--My part on this project: Mijn uitleningen-->
     <main class="home">
 
-        <header>
             <div class="text"><img src="./images/oba.png" alt="OBA logo"></div>
 
             <div class="uitleningen">
@@ -136,8 +134,7 @@
                 <h1>Mijn Uitleningen</h1>
                 <h6>in te leveren boeken: 6</h6>
             </div>
-        </header>
-
+        
             <div class="articles">
                 <article>
                     <img src="https://i.ibb.co/tCpwZHS/cover-beasts-of-a-little-land.jpg" alt="Beasts of a little Land">
@@ -194,7 +191,9 @@
                 </article>
             </div>
 
-        <button class="terug">terug &#8594;</button>
+            <a href="https://pommelienn.github.io/the-client-website/">
+                <button class="terug">terug &#8594;</button>
+            </a>
 
     </main>
 
