buttons actief gemaakt

--- a/uitleningen.html
+++ b/uitleningen.html
@@ -22,7 +22,7 @@
         <header>
             <div class="image-text">
                 <span class="image">
-                    <img src="./image/AmberFoto.jpeg" alt="Gebruiker-foto">
+                    <img src="" alt="Gebruiker-foto">
                 </span>
 
                 <div class="text logo-text">
@@ -97,12 +97,13 @@
                             <span class="text nav-text">Reserveringen</span>
                         </a>
                     </li>
+                </ul>
 
             </div>
 
             <div class="bottom-content">
                 <li class="">
-                    <a href="#">
+                    <a href="https://www.oba.nl">
                         <i class='bx bx-log-out icon' ></i>
                         <span class="text nav-text">Uitloggen</span>
                     </a>
