error links toegevoegd + finishing touches

--- a/uitleningen.html
+++ b/uitleningen.html
@@ -22,7 +22,7 @@
         <header>
             <div class="image-text">
                 <span class="image">
-                    <img src="" alt="Gebruiker-foto">
+                    <img src="/images/wingsan.png" alt="Gebruiker-foto">
                 </span>
 
                 <div class="text logo-text">
@@ -58,14 +58,14 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="https://lisagjh.github.io/the-client-website/404.html">
                             <i class='bx bx-list-ul icon'></i>
                             <span class="text nav-text">Leeslijst</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="https://wingsvn.github.io/the-client-website/">
+                        <a href="https://wingsvn.github.io/the-client-website/uitleningen.html">
                             <i class='bx bx-bar-chart-alt-2 icon'></i>
                             <span class="text-long nav-text">Uitleningen en verlengen</span>
                         </a>
@@ -85,14 +85,14 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="https://lisagjh.github.io/the-client-website/404.html">
                             <i class='bx bx-pie-chart-alt icon'></i>
                             <span class="text nav-text">Betaalgeschiedenis</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="https://lisagjh.github.io/the-client-website/404.html">
                             <i class='bx bx-heart icon'></i>
                             <span class="text nav-text">Reserveringen</span>
                         </a>
