--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header>
             <div class="image-text">
                 <span class="image">
-                    <img src="./image/AmberFoto.jpeg" alt="Gebruiker-foto">
+                    <img src="/images/wingsan.png" alt="Gebruiker-foto">
                 </span>
 
                 <div class="text logo-text">
@@ -57,7 +57,7 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="https://lisagjh.github.io/the-client-website/404.html">
                             <i class='bx bx-list-ul icon'></i>
                             <span class="text nav-text">Leeslijst</span>
                         </a>
@@ -84,14 +84,14 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="https://lisagjh.github.io/the-client-website/404.html">
                             <i class='bx bx-pie-chart-alt icon'></i>
                             <span class="text nav-text">Betaalgeschiedenis</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="https://lisagjh.github.io/the-client-website/404.html">
                             <i class='bx bx-heart icon'></i>
                             <span class="text nav-text">Reserveringen</span>
                         </a>
